@@ -31,3 +31,4 @@
 20050914 1.33 FileSelect.pm fix sort bug in line 90
 20050915 1.34 FileSelect.pm -Directory option; bugfix when -Chdir=-SelDir=0
 20050928 1.35 FileSelect.pm returns correct var-type if q for quit
+20060816 1.36 neater pod SYNOPSIS formatting, audio_stuff uses mpg123 for mp3
